syntax = "proto3";

option java_multiple_files = true;
option java_package = "local.example.hello.grpc";
option java_outer_classname = "Hello";

package hello;

// service definition
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// request message containing the user's name
message HelloRequest {
  string name = 1;
}

// response message
message HelloReply {
  string message = 1;
}
